--- a/client/src/components/speckle_spackle/sudoku_style.css
+++ b/client/src/components/speckle_spackle/sudoku_style.css
@@ -57,3 +57,44 @@ div[name=square]:hover {
     display : flex;
     flex-flow : wrap;
 }
+
+.swatch {
+    width: 100%;
+    height: 12vw;
+    border-radius: 100%;
+}
+
+
+@media screen and (orientation:portrait) {
+    .pageContainer {
+        height: 80vh;
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .gutter {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 100vw;
+        height: 15%;
+        overflow: hidden;
+    }
+    
+    .mainDisplay {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 70%;
+        width: 100vw;
+        overflow: hidden;
+    }
+
+    .swatch {
+        width: 100%;
+        height: 12vw;
+        border-radius: 100%;
+    }
+}
