--- a/server/public/style.css
+++ b/server/public/style.css
@@ -21,3 +21,55 @@
     margin: 2%;
     padding: 2%;
 }
+
+.showModal > div:first-child {
+    display: block;
+    background-color: black;
+    opacity: .5;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.showModal > div:last-child {
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+} 
+
+.noModal {
+    display: none;
+}
+
+h2, button, a, .title {
+    font-family: 'Metamorphous', sans-serif;
+}
+
+h2 {
+    color: white;
+}
+
+.page-title {
+    height: 25vh;
+    font-family: 'Metamorphous', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0;
+}
+
+.play-test {
+    width: 100%;
+    position: fixed;
+    bottom: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+.play-test * {
+    margin: 2px;
+}
