Rankings Added, Along with More Images

--- a/client/src/components/title_style.css
+++ b/client/src/components/title_style.css
@@ -9,3 +9,11 @@
 .forestvalley {
     background-image: url(./imgs/forestvalley_resized.jpg);
 }
+
+.sunset {
+    background-image: url(./imgs/sunset.jpg);
+}
+
+.legos {
+    background-image: url(./imgs/legos.jpg);  
+}
