--- a/server/public/style.css
+++ b/server/public/style.css
@@ -10,11 +10,13 @@
 
 .header {
     top: 0;
+    height: 55px;
 }
 
 .footer {
     bottom: 0;
     position: fixed;
+    height: 45px;
 }
 
 .card {
@@ -72,4 +74,8 @@ h2 {
 
 .play-test * {
     margin: 2px;
+}
+
+a {
+    text-decoration: none;
 }
