--- a/client/src/components/speckle_spackle/sudoku_style.css
+++ b/client/src/components/speckle_spackle/sudoku_style.css
@@ -62,6 +62,16 @@ div[name=square]:hover {
     width: 100%;
     height: 12vw;
     border-radius: 100%;
+    font-size: 16vw;
+}
+
+i {
+    -webkit-text-fill-color: currentColor;
+}
+
+.fa-refresh:hover {
+    -webkit-text-fill-color: white;
+    text-shadow: 1px 1px 5px black;
 }
 
 
