Seemless Transition Between Creation and Test Play Completed

--- a/client/src/components/speckle_spackle/sudoku_style.css
+++ b/client/src/components/speckle_spackle/sudoku_style.css
@@ -36,7 +36,11 @@ div[name=clue] {
     box-sizing: border-box;
     border-radius: 100%;
     display: inline-block;
-    transition: .5s;
+    transition: .2s;
+}
+
+div[name=clue]:hover {
+    opacity: .5;
 }
 
 div[name=square] {
