Speckle Spackle and Word Guess are both Creatable, Loadable, and Playable

--- a/client/src/components/speckle_spackle/sudoku_style.css
+++ b/client/src/components/speckle_spackle/sudoku_style.css
@@ -105,7 +105,17 @@ i {
 
     .swatch {
         width: 100%;
-        height: 12vw;
+        font-size: 12vh;
         border-radius: 100%;
+    }
+
+    .gridSizeIcon {
+        height: 100%;
+    }
+}
+
+@media screen and (orientation:landscape) {
+    .gridSizeIcon {
+        width: inherit;
     }
 }
