Removed Unblock Me Components and Added Some Sizing Changes To Keep Portrait Mode on Wide Screens

--- a/client/src/components/speckle_spackle/speckle_spackle_style.css
+++ b/client/src/components/speckle_spackle/speckle_spackle_style.css
@@ -1,6 +1,6 @@
 
 .pageContainer {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     position: relative;
     display: flex;
@@ -10,7 +10,6 @@
     display: flex;
     flex-flow: column;
     justify-content: space-around;
-    height: 85vh;
     width: 15vw;
     overflow: hidden;
 }
@@ -20,7 +19,7 @@
     flex-flow: column;
     justify-content: center;
     align-items: center;
-    height: 85vh;
+    height: 100%;
     width: 70vw;
     overflow: hidden;
 }
