--- a/server/client/src/components/speckle_spackle/speckle_spackle_style.css
+++ b/server/client/src/components/speckle_spackle/speckle_spackle_style.css
@@ -1,26 +1,33 @@
-
 .pageContainer {
     height: 100%;
     width: 100%;
     position: relative;
     display: flex;
+    flex-direction: column;
+}
+
+.pageContainerPlay {
+    height: 70%;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .gutter {
     display: flex;
-    flex-flow: column;
     justify-content: space-around;
-    width: 15vw;
+    width: 100%;
+    height: 15%;
     overflow: hidden;
 }
 
 .mainDisplay {
     display: flex;
-    flex-flow: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 70vw;
+    height: 70%;
+    width: 100%;
     overflow: hidden;
 }
 
@@ -51,19 +58,18 @@ div[name=square]:hover {
 }
 
 .grid-style {
-    width : 65vmax;
-    height : 65vmax;
-    max-height: 85vmin;
-    max-width: 85vmin;
+    width : 60vh;
+    height : 100%;
+    max-height: 90vmin;
+    max-width: 90vmin;
     display : flex;
     flex-flow : wrap;
 }
 
 .swatch {
     width: 100%;
-    /* height: 12vw; */
     border-radius: 100%;
-    font-size: 16vw;
+    font-size: 12vh;
 }
 
 i {
@@ -75,55 +81,6 @@ i {
     text-shadow: 1px 1px 5px black;
 }
 
-
-@media screen and (orientation:portrait) {
-    .pageContainer {
-        height: 80vh;
-        width: 100%;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .pageContainerPlay {
-        height: 85vh;
-        width: 100%;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .gutter {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        width: 100vw;
-        height: 15%;
-        overflow: hidden;
-    }
-    
-    .mainDisplay {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 70%;
-        width: 100vw;
-        overflow: hidden;
-    }
-
-    .swatch {
-        width: 100%;
-        font-size: 12vh;
-        border-radius: 100%;
-    }
-
-    .gridSizeIcon {
-        height: 100%;
-    }
-}
-
-@media screen and (orientation:landscape) {
-    .gridSizeIcon {
-        width: 95%;
-    }
+.gridSizeIcon {
+    height: 90%;
 }
