--- a/server/client/src/components/speckle_spackle/speckle_spackle_style.css
+++ b/server/client/src/components/speckle_spackle/speckle_spackle_style.css
@@ -84,3 +84,13 @@ i {
 .gridSizeIcon {
     height: 90%;
 }
+
+@media only screen and (orientation: landscape) {
+    .mainDisplay {
+        height: 62%;
+    }
+
+    .gutter {
+        height: 19%;
+    }
+}
